# multi-agent-LLM-framework-for-ATD

./: .env  .env_empty  .gitattributes  .gitignore  Dockerfile  README.md  aggregate_cycle_sizes.py  anonymize_repo.py  check-fail-reason-DELETE-LATER.sh  check_repos.py  compose.yml  cycle_sizes_aggregate.json  cycles_to_analyze copy 2.txt  cycles_to_analyze.txt  cycles_to_analyze_csharp.txt  cycles_to_analyze_dev.txt  cycles_to_analyze_eval.txt  cycles_to_analyze_python.txt  cycles_to_analyze_testing.txt  fetch_git_diffs.sh  find_cycles_to_analyze.py  find_failures.py  main.py  make_rq1_tables.py  make_rq2_tables.py  make_rq3_tables.py  metrics.json  multi-agent-LLM-framework-for-ATD.sln  pyproject.toml  repos.txt  repos_all.txt  repos_dev.txt  repos_eval.txt  repos_overview.csv  repos_testing.txt  repos_woriking_old.txt  repos_working.txt  rq_utils.py  run_all.sh  run_all_backup.sh  (+10 more)
ATD_identification/: README.md  analyze_cycles.sh  analyze_cycles_dotnet.sh  analyze_cycles_python.sh  build_cycles_to_analyze.py  build_dependency_graph_pydeps.py  extract_sccs.py  parse_module_cycles.py  pick_cycles.py  pydeps_utils.py
LLM_hosting_replication_details/: README.md
analysis_out_dev_auxiliary/: cycle_level_pairwise_success.csv  cycle_size_breakdown.csv  edit_footprint.csv  eval_rq3_cycle_difficulty.csv  eval_rq3_structural_bins.csv  explanation_length.csv  global_regression_criteria.csv  language_breakdown.csv  main_results.csv  openhands_iteration_limit.csv  python_stale_import_risk.csv  python_stale_import_risk_details.csv  repo_success.csv  run_accounting.csv  (+1 more)
(+362 files in other folders)
