[project]
name = "multi-agent-llm-framework-for-atd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bandit>=1.8.6",
    "mypy>=1.18.2",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "openhands>=1.0.1",
    "pip-audit>=2.9.0",
    "pydeps>=3.0.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "radon>=6.0.1",
    "requests>=2.32.5",
    "ruff>=0.14.0",
    "scipy>=1.16.2",
    "tox-uv>=1.29.0",
    "vulture>=2.14",
]
